src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~node_modules/leaflet/dist/leaflet.css";

.legend {
  background-color: rgba(255, 255, 255, 0.8) !important;
  padding: 5px;
  border-radius: 5px;
}

html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
mat-dialog-container{
  opacity: 0.8;
}
.transparent-bg{
  background: rgba(0,0,0,0.75);
}
.mdc-slider__value-indicator-text {
  white-space: nowrap;
 padding-top: 150px;
}

